reading time for ch2

--- a/modules/ch2-services/pages/s2-fundamental-quiz.adoc
+++ b/modules/ch2-services/pages/s2-fundamental-quiz.adoc
@@ -1,4 +1,8 @@
+:time_estimate: 1
+
 = Quiz: OpenStack Services and Application Workloads
+
+_Estimated reading time: *{time_estimate} minutes*._
 
 Objective::
 
