--- a/modules/ch2-services/pages/s3-additional-lecture.adoc
+++ b/modules/ch2-services/pages/s3-additional-lecture.adoc
@@ -1,4 +1,8 @@
+:time_estimate: 12
+
 = Additional Services of Red Hat OpenStack
+
+_Estimated reading time: *{time_estimate} minutes*._
 
 Objective::
 
