--- a/modules/ch2-services/pages/s1-fundamental-lecture.adoc
+++ b/modules/ch2-services/pages/s1-fundamental-lecture.adoc
@@ -1,4 +1,8 @@
+:time_estimate: 9
+  
 = Fundamental Services of Red Hat OpenStack
+
+_Estimated reading time: *{time_estimate} minutes*._
 
 Objective::
 
