--- a/modules/ch2-services/pages/s4-additional-quiz.adoc
+++ b/modules/ch2-services/pages/s4-additional-quiz.adoc
@@ -1,4 +1,8 @@
+:time_estimate: 2
+
 = Quiz: OpenStack Services and Cloud-Native Applications
+
+_Estimated reading time: *{time_estimate} minutes*._
 
 Objective::
 
