--- a/modules/ch2-services/pages/s5-administration-lecture.adoc
+++ b/modules/ch2-services/pages/s5-administration-lecture.adoc
@@ -1,4 +1,8 @@
+:time_estimate: 5
+
 = Administration Services of Red Hat OpenStack
+
+_Estimated reading time: *{time_estimate} minutes*._
 
 Objective::
 
