--- a/modules/ch2-services/pages/s6-administration-quiz.adoc
+++ b/modules/ch2-services/pages/s6-administration-quiz.adoc
@@ -1,4 +1,8 @@
+:time_estimate: 1
+
 = Quiz: OpenStack Services and IT Infrastructure
+
+_Estimated reading time: *{time_estimate} minutes*._
 
 Objective::
 
