--- a/modules/ch2-services/pages/s8-review-quiz-answers.adoc
+++ b/modules/ch2-services/pages/s8-review-quiz-answers.adoc
@@ -1,4 +1,8 @@
+:time_estimate: 6
+
 = Answers to the Review Quiz
+
+_Estimated reading time: *{time_estimate} minutes*._
 
 WARNING: Pending Review
 
