reading time for ch3

--- a/modules/ch2-services/pages/s8-review-quiz.adoc
+++ b/modules/ch2-services/pages/s8-review-quiz.adoc
@@ -2,7 +2,7 @@
 
 = Review Quiz: Red Hat OpenStack Services
 
-:time_estimate: 5
+_Estimated reading time: *{time_estimate} minutes*._
 
 Objective::
 
