--- a/modules/ch3-multitenancy/pages/s2-multitenancy-quiz.adoc
+++ b/modules/ch3-multitenancy/pages/s2-multitenancy-quiz.adoc
@@ -1,4 +1,8 @@
+:time_estimate: 3
+
 = Quiz: Red Hat OpenStack Multi-Tenancy
+
+_Estimated reading time: *{time_estimate} minutes*._
 
 Objective::
 
