--- a/modules/ch3-multitenancy/pages/s6-review-quiz.adoc
+++ b/modules/ch3-multitenancy/pages/s6-review-quiz.adoc
@@ -1,4 +1,8 @@
+:time_estimate: 3
+
 = Review Quiz: Multi-Tenancy and Topology in Red Hat OpenStack
+
+_Estimated reading time: *{time_estimate} minutes*._
 
 Objective::
 
