--- a/modules/ch1-intro/pages/s4-tasks-quiz-answers.adoc
+++ b/modules/ch1-intro/pages/s4-tasks-quiz-answers.adoc
@@ -13,13 +13,13 @@ WARNING: Pending review.
 * [ ] Installing RPM packages inside a RHEL VM. +
 _Incorrect: Linux System Administrators are more likely to perform tasks inside a VM_
 
-* [x] Attaching a VM to a different virtual network. +
+* [x] *Attaching a VM to a different virtual network.* +
 _Correct: Server instances (VMs) and virtual networks are OpenStack API resources._
 
 * [ ] Upgrading RHEL to a newer minor release inside a VM. +
 _Incorrect: Linux System Administrators are more likely to perform tasks inside a VM_
 
-* [x] Configuring IP routing rules for a virtual networks. +
+* [x] *Configuring IP routing rules for a virtual networks.* +
 _Correct: Virtual networks and everything related to them are OpenStack API resources._
 
 * [ ] Configuring firewall rules inside a RHEL VM. +
@@ -27,10 +27,10 @@ _Incorrect: Linux System Administrators are more likely to perform tasks inside 
 
 2. Which of the following tasks are more likely to be performed by an OpenStack Operator, as opposed to an OpenStack Administrator?
 
-* [x] Creating new server instances (VMs). +
+* [x] *Creating new server instances (VMs).* +
 _Correct: OpenStack Operators manage OpenStack resources which affect individual application workloads._
 
-* [x] Creating new virtual networks. +
+* [x] *Creating new virtual networks.* +
 _Correct: OpenStack Operators manage OpenStack resources which affect individual application workloads._
 
 * [ ] Creating a new class of virtual server, which provides virtual GPUs. +
@@ -44,7 +44,7 @@ _Incorrect: OpenStack Administrators manage OpenStack settings which connect the
 
 3. Which of the following tasks are more likely to be performed by an OpenStack Administrator, as opposed to Systems, Storage, or Network Administrators and other IT personnel?
 
-* [x] Adding new physical RHEL servers as compute nodes to an OpenStack cluster. +
+* [x] *Adding new physical RHEL servers as compute nodes to an OpenStack cluster.* +
 _Correct: The OpenStack Administrator manages the cluster, including its compute nodes._
 
 * [ ] Configuring VLANs at the switch fabric to enable compute nodes to connect to those VLANs. +
@@ -53,10 +53,10 @@ _Incorrect: This task usually belongs to Network Administrators._
 * [ ] Configuring storage pools and logical disk units (LUNs) at the storage array to store data from OpenStack services. +
 _Incorrect: This task usually belongs to Storage Administrators._
 
-* [x] Installing RPM packages and configure physical RHEL servers to be managed by OpenStack control planes. +
+* [x] *Installing RPM packages and configure physical RHEL servers to be managed by OpenStack control planes.* +
 _Correct: OpenStack Administrators could delegate this task to the Server Administration team, but they should be able to perform themselves, and will frequently demand to._
 
-* [x] Installing OpenStack services on OpenShift clusters. +
+* [x] *Installing OpenStack services on OpenShift clusters.* +
 _Correct: OpenStack Administrators could delegate this task to the OpenShift Administration team, but they should be able to perform themselves, and will frequently demand to._
 
 4. Which of the following tasks are likely to NOT be required from Red Hat OpenStack on OpenShift Operators and Administrators, as opposed to from users of an OpenStack cluster built using upstream binaries or source code?
@@ -64,11 +64,11 @@ _Correct: OpenStack Administrators could delegate this task to the OpenShift Adm
 * [ ] Configuring operating system images to boot new server instance VMs. +
 _Incorrect: typical tasks related to managing application workloads belong to OpenStack Operators, no matter they use the Red Hat product or not._
 
-* [x] Configuring multiple instances of OpenStack services, one active and another passive, using pacemaker or another clustering middleware. +
+* [x] *Configuring multiple instances of OpenStack services, one active and another passive, using pacemaker or another clustering middleware.* +
 _Correct: Red Hat OpenStack users rely on the high-availability (HA) configurations embedded the product, in the case of Red Hat OpenStack Services on OpenShift, leveraging HA features from Kubernetes._
 
 * [ ] Installing an operating system on compute nodes, such as RHEL. +
 _Incorrect: Red Hat OpenStack users are still required to provision and configure their compute nodes, but they are required to use RHEL and cannot use any other Linux distribution._
 
-* [x] Selecting an installation method for OpenStack services on control plane servers, such as from precompiled binaries, operating system packages, or container images. +
+* [x] *Selecting an installation method for OpenStack services on control plane servers, such as from precompiled binaries, operating system packages, or container images.* +
 _Correct: Red Hat OpenStack users rely on the installation methods embedded the product, in the case of Red Hat OpenStack Services on OpenShift, as add-on operators for OpenShift._
