--- a/modules/ch1-intro/pages/s7-review-quiz-answers.adoc
+++ b/modules/ch1-intro/pages/s7-review-quiz-answers.adoc
@@ -13,7 +13,7 @@ WARNING: Pending review.
 * [ ] True +
 _Incorrect: Red Hat OpenStack Services on OpenShift does not need nor integrates with OpenShift Virtualization._
 
-* [x] False +
+* [x] *False* +
 _Correct: Red Hat OpenStack Services on OpenShift manages application VMs directly, without using OpenShift Virtualization. It uses the VM manager included with RHEL (libvirt)._
 
 2. True or False: An OpenStack Operator needs access to the OpenShift web console to manage application workloads running as VMs on their OpenStack clusters.
@@ -21,7 +21,7 @@ _Correct: Red Hat OpenStack Services on OpenShift manages application VMs direct
 * [ ] True +
 _Incorrect: OpenStack Operators do not require access to any OpenShift tool to perform their daily work._
 
-* [x] False +
+* [x] *False* +
 _Correct: OpenStack Operators only need access to OpenStack APIs, which they get from the OpenStack client and the OpenStack Horizon dashboard._
 
 3. True of False: An OpenStack Operator needs access to RHEL compute nodes to manage application VMs running on those nodes.
@@ -29,12 +29,12 @@ _Correct: OpenStack Operators only need access to OpenStack APIs, which they get
 * [ ] True +
 _Incorrect: OpenStack Operators should not perform any tasks directly on compute nodes._
 
-* [x] False +
+* [x] *False* +
 _Correct: OpenStack Operators manage application VMs using OpenStack APIs._
 
 4. True or False: An OpenStack Administrator needs direct access to the OpenShift clusters running the OpenStack control planes of their OpenStack clusters.
 
-* [x] True +
+* [x] *True* +
 _Correct: OpenStack Administrators are required to manage OpenStack services using Kubernetes APIs and custom resources, and that requires access to OpenShift clusters._
 
 * [ ] False +
@@ -45,12 +45,12 @@ _Incorrect: OpenStack Administrators cannot manage OpenStack services without ac
 * [ ] True +
 _Incorrect: OpenStack Operators can perform most, but not all, of their tasks using the Horizon web UI._
 
-* [x] False +
+* [x] *False* +
 _Correct: Sometimes an OpenStack operator needs to use the OpenStack client or some other tool which provides access to OpenStack APIs not availabe through Horizon._
 
 6. An OpenStack Operator focuses on OpenStack API resources that affect individual application workloads, as opposed to OpenStack API resources which affect an entire cluster.
 
-* [x] True +
+* [x] *True* +
 _Correct: OpenStack Operators role focus on applications and their associated VMs, virtual networks, and virtual storage._
 
 * [ ] False +
