--- a/modules/ch3-multitenancy/pages/s4-topology-quiz-answers.adoc
+++ b/modules/ch3-multitenancy/pages/s4-topology-quiz-answers.adoc
@@ -4,8 +4,6 @@
 
 _Estimated reading time: *{time_estimate} minutes*._
 
-WARNING: Pending Review.
-
 == Large OpenStack Clusters
 
 1. An OpenStack Administrator needs to plan for a cluster which encompasses two different floors of a data center building. Each floor has its own power supply and core network switches. Which of the following is the best way of structuring the cluster for the scenario?
@@ -28,18 +26,18 @@ _Incorrect: cells are not intended to represent failure domains._
 2. An OpenStack Administrator needs to plan for applications that require special network accelerator cards, which are *not* available in all compute nodes of a cluster. The same applications also include server instances which run mobile application backends and do not require the accelerator cards. Which of the following is the best way of structuring the cluster for the scenario?
 
 * [ ] Compute nodes with the accelerator card belong to a region. +
-_Incorrect: Seggregating those compute nodes to their own OpenStack clusters complicates communication between different kinds of server instances of the applications._
+_Incorrect: Segregating those compute nodes to their own OpenStack clusters complicates communication between different kinds of server instances of the applications._
 
 * [ ] Compute nodes with the accelerator card belong to an AZ. +
-_Incorrect: hardware capabilities of compute node to not configure a failure domain._
+_Incorrect: hardware capabilities of compute nodes to not configure a failure domain._
 
 * [x] *Compute nodes with the accelerator card belong to a host aggregate.* +
 _Correct: Host aggregates enable administrators and operators to collaborate to run server instances on compute nodes with or without accelerator cards, according to the needs of each server instance._
 
 * [ ] Compute nodes with the accelerator card belong to a cell.
-_Incorrect: hardware capabilities of compute node to not configure a compute cell._
+_Incorrect: hardware capabilities of compute nodes to not configure a compute cell._
 
-3. An OpenStack Administrator configured an cluster with four kinds of physical machines: machines with GPUs, machines with high CPU core count, machines with both GPUs and high core count, and finally machines with neither a CPU nor a high core count. What an OpenStack Operator should do to ensure that a workload which requires both GPUs and many CPU cores runs in a physical machine of the matching kind?
+3. An OpenStack Administrator configured a cluster with four kinds of physical machines: machines with GPUs, machines with high CPU core count, machines with both GPUs and high core count, and finally machines with neither a CPU nor a high core count. What should an OpenStack Operator do to ensure that a workload which requires both GPUs and many CPU cores runs in a physical machine of the matching kind?
 
 * [ ] Use a server flavor which maps to an AZ of compute nodes with both GPUs and high core count. +
 _Incorrect: AZs do not map to kinds of server hardware._
@@ -51,7 +49,7 @@ _Incorrect: AZs do not map to kinds of server hardware._
 _Correct: a compute node can belong to multiple host aggregates._
 
 * [ ] Use a server flavor which maps to a host aggregate of compute nodes with both GPUs and high core count. +
-_Incorrect: There is no need to create a host aggregate for the intersection of different hardware capabilies because a compute node can belong to multiple host aggregates._
+_Incorrect: There is no need to create a host aggregate for the intersection of different hardware capabilities because a compute node can belong to multiple host aggregates._
 
 * [ ] Use a server flavor which maps to a cell of compute nodes with GPUs and also to another cell of compute nodes with high core count. +
 _Incorrect: compute cells do not map to kinds of server hardware._
