--- a/modules/ch3-multitenancy/pages/s4-topology-quiz.adoc
+++ b/modules/ch3-multitenancy/pages/s4-topology-quiz.adoc
@@ -8,11 +8,9 @@ Objective::
 
 Assess the learner's understanding of OpenStack cluster topology mechanisms.
 
-WARNING: Pending Review.
-
 == Questions
 
-1. An OpenStack Administrator needs to plan for a cluster which encompasses two different floors of a data center building. Each floor has its own power supply and core network switches. Which of the following is the best way of structuring the cluster for the scenario?
+1. An OpenStack Administrator needs to plan for a cluster that encompasses two different floors of a data center building. Each floor has its own power supply and core network switches. Which of the following is the best way of structuring the cluster for the scenario?
 
 * [ ] Each building maps to a cluster.
 * [ ] Each building maps to a region.
@@ -27,7 +25,7 @@ WARNING: Pending Review.
 * [ ] Compute nodes with the accelerator card belong to a host aggregate.
 * [ ] Compute nodes with the accelerator card belong to a cell.
 
-3. An OpenStack Administrator configured an cluster with four kinds of physical machines: machines with GPUs, machines with high CPU core count, machines with both GPUs and high core count, and finally machines with neither a CPU nor a high core count. What an OpenStack Operator should do to ensure that a workload which requires both GPUs and many CPU cores runs in a physical machine of the matching kind?
+3. An OpenStack Administrator configured a cluster with four kinds of physical machines: machines with GPUs, machines with high CPU core count, machines with both GPUs and high core count, and finally machines with neither a CPU nor a high core count. What an OpenStack Operator should do to ensure that a workload which requires both GPUs and many CPU cores runs in a physical machine of the matching kind?
 
 * [ ] Use a server flavor which maps to an AZ of compute nodes with both GPUs and high core count.
 * [ ] Use a server flavor which maps to an AZ of compute nodes with GPUs and also to another AZ of compute nodes with high core count.
