--- a/modules/ch3-multitenancy/pages/s6-review-quiz.adoc
+++ b/modules/ch3-multitenancy/pages/s6-review-quiz.adoc
@@ -8,23 +8,21 @@ Objective::
 
 Assess the learner's understanding of OpenStack multi-tenancy and topology mechanisms.
 
-WARNING: Pending Review.
-
 // Deviating from the True/False questions from previous chapters on purpose.
 
 // This review quiz is shorter not only because the chapter has fewer sections than previous chapters, but because multi-tenancy and topology are mostly administrator concerns and this course focus on operator tasks.
 
 == Questions
 
-1. An OpenStack Administrator needs to support, on the same cluster, two business units which used to be independent companies, before a merger, and must continue using each of their legacy enterprise authentication system and each have their own team of OpenStack Operators. How can OpenStack support this requirement?
+1. An OpenStack Administrator needs to support, on the same cluster, two business units that used to be independent companies, before a merger, and must continue using each of their legacy enterprise authentication systems and each have their own team of OpenStack Operators. How can OpenStack support this requirement?
 
-* [ ] Each business unit requires their own domain.
-* [ ] Each business unit requires their own projects.
-* [ ] Each business unit requires their own cluster.
-* [ ] Each business unit requires their own region.
-* [ ] Each business unit requires their own AZ.
-* [ ] Each business unit requires their own host aggregate.
-* [ ] Each business unit requires their own cell.
+* [ ] Each business unit requires its own domain.
+* [ ] Each business unit requires its own projects.
+* [ ] Each business unit requires its own cluster.
+* [ ] Each business unit requires its own region.
+* [ ] Each business unit requires its own AZ.
+* [ ] Each business unit requires its own host aggregate.
+* [ ] Each business unit requires its own cell.
 
 2. An OpenStack Operator needs to configure a multi-instance workload to be resilient against physical failures of network switches and uninterrupted power supplies (UPS) which are dedicated to a server rack. The data center was designed with multiple server racks, and each rack has its dedicated network switch and UPS devices. Assuming that an Administrator already configured the proper tenancy or topology mechanism, how would the operator configure its workloads?
 
@@ -36,7 +34,7 @@ WARNING: Pending Review.
 * [ ] By spreading server instances over multiple host aggregates.
 * [ ] By spreading server instances over multiple cells.
 
-3. An OpenStack Operator has the member role in a project and found that the team of developers working on that project is very knowleadgeable about OpenStack and wishes to allow the team more authonomy managing API resources for their application. Can that operator grant those developers permission to manage API resources on their project?
+3. An OpenStack Operator has the member role in a project and found that the team of developers working on that project is very knowledgeable about OpenStack and wishes to allow the team more autonomy managing API resources for their application. Can that operator grant those developers permission to manage API resources on their project?
 
 * [ ] Yes
 * [ ] No
@@ -46,7 +44,7 @@ WARNING: Pending Review.
 * [ ] Yes
 * [ ] No
 
-5. An OpenStack Administrator created two host aggregates: one for physical machines with GPUs and another for physical machines with very large memory. Some machines have both GPUs and very large memory, should the administrator create a third host aggregate for those machines?
+5. An OpenStack Administrator created two host aggregates: one for physical machines with GPUs and another for physical machines with large memory. Some machines have both GPUs and large memory, should the administrator create a third host aggregate for those machines?
 
 * [ ] Yes
 * [ ] No
